# mpc

./: CMakeLists.txt  arc_forces_script.m  package.xml
ARC_solver/: ARC_solver_info.txt
ARC_solver/include/: ARC_solver.h
ARC_solver/interface/: ARC_solver_build.py  ARC_solver_lib.mdl  ARC_solver_simulinkBlockcompact.c  ARC_solvercompact_lib.mdl
arc_solver/: ARC_solver.mexa64  ARC_solver_simulinkBlock.mexa64  ARC_solver_simulinkBlockcompact.mexa64  arc_forces_script.m  arc_solver.m  arc_solver.mexa64  arc_solver_casadi2forces.c  arc_solver_model_1.c  arc_solver_model_10.c  arc_solver_model_20.c  arc_solver_simulinkBlock.mexa64  arc_solver_simulinkBlockcompact.mexa64  stdout_temp
arc_solver/ARC_solver/interface/: ARC_solver.m  ARC_solver_lib.mdl  ARC_solver_mex.c  ARC_solver_py.py  ARC_solver_simulinkBlock.c  ARC_solvercompact_lib.mdl  COPYING.m
arc_solver/arc_solver/: arc_solver.m  arc_solver_info.txt
arc_solver/arc_solver/include/: arc_solver.h  arc_solver_casadi2forces.c  arc_solver_model_9.c
arc_solver/arc_solver/interface/: COPYING.m  arc_solver.m  arc_solver_build.py  arc_solver_lib.mdl  arc_solver_mex.c  arc_solver_py.py  arc_solver_simulinkBlock.c  arc_solver_simulinkBlockcompact.c  arc_solvercompact_lib.mdl
include/arc_mpc/: arc_mpc.hpp
src/: arc_mpc.cpp  arc_mpc_node.cpp  arc_mpc_node.cpp~  test
text/: pointsinterpol.txt  pointsplaned.txt  pointsreference.txt  pointsspline.txt  teach_global_points.txt
